fix: align profile title and add alt image

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -14,5 +14,6 @@
     line-height: 1.22;
     text-align: right;
     min-width: 189px;
+    text-align: center;
   }
 }
